--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,12 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "files.associations": {
-    "signal.h": "c",
-    "unistd.h": "c",
-    "stdio.h": "c",
-    "types.h": "c",
-    "stat.h": "c"
-  }
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
